--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "email": ""
   },
   "dependencies": {
-    "express": "~4.9.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
+    "express": "~4.9.0",
     "jade": "~1.6.0",
+    "morgan": "~1.3.0",
+    "nodegit": "^0.12.2",
+    "nodegit-kit": "^0.8.1",
+    "promise": "^7.1.1",
+    "serve-favicon": "~2.1.3",
     "stylus": "0.42.3"
   }
 }
