--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "gitsum",
-  "version": "0.0.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "description": "gitsum",
   "author": {
-    "name": "khaos",
-    "email": ""
+    "name": "Egor 'khaos' Zelensky",
+    "email": "i@khaos.su"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
