--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "debug": "~2.0.0",
     "express": "~4.9.0",
     "jade": "~1.6.0",
+    "moment": "^2.13.0",
     "morgan": "~1.3.0",
     "nodegit": "^0.12.2",
     "nodegit-kit": "^0.8.1",
