--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "express": "~4.9.0",
+    "intel": "^1.1.0",
     "jade": "~1.6.0",
     "moment": "^2.13.0",
     "morgan": "~1.3.0",
